# src/models/brand.ts
@@ -1,5 +1,6 @@
 import mongoose from 'mongoose';
 import { IBrand } from '../interfaces/IBrand';
+import slugify from 'slugify';
 
 const brandSchema = new mongoose.Schema(
   {
@@ -10,19 +11,28 @@ const brandSchema = new mongoose.Schema(
     },
     slug: {
       type: String,
-      required: true,
     },
-    // logo: {
-    //   type: String,
-    //   required: true,
-    // },
+    brandLogo: {
+      type: String,
+      default: '',
+    },
   },
   {
     timestamps: true,
     toJSON: {
       virtuals: true,
+      transform(doc, ret) {
+        delete ret.__v;
+        delete ret._id;
+      },
     },
   },
 );
+
+brandSchema.pre('save', async function (done) {
+  const slugBrandName = slugify(this.get('name'), { lower: true });
+  this.set('slug', slugBrandName);
+  done();
+});
 
 export default mongoose.model<IBrand & mongoose.Document>('Brand', brandSchema);
